[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todoist-mcp"
version = "1.1.0"
description = "MCP Server for Todoist — Connect AI agents to your Todoist tasks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "todoist", "ai", "tasks", "todo", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp[cli]>=1.0.0", "requests>=2.28.0"]

[project.urls]
Homepage = "https://github.com/LittlePeter52012/todoist-mcp"
Issues = "https://github.com/LittlePeter52012/todoist-mcp/issues"

[project.scripts]
todoist-mcp = "todoist_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/todoist_mcp"]
